fixing spacing for css

--- a/server/public/css/loginandregister.css
+++ b/server/public/css/loginandregister.css
@@ -54,7 +54,8 @@ body{
   
 h1{
   color: #f2f2f2;
-  text-align: center
+  text-align: center;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 
 
